# SecondBrain

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: ARCHITECTURE.md  spec.md
src/secondbrain/: __init__.py  cli.py  notion.py
tests/: test_notion.py
